<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HottNights</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fbLogin"> Login With FaceBook</string>
    <string name="twitLogin">Login With Twitter</string>
    <string name="drinkslist"><u>Drinks List</u></string>
    <string name="admission">Admission:</string>
   <string name="date">Date:</string>
   <string name="time">Time:</string>
   <string name="promotion">Promotion:</string>
    <string name="dresscode"><u>Dress Code</u></string>
    <string name="hats">Hats:</string>
    <string name="hoodies">Hoodies:</string>
    <string name="shirts">Shirts:</string>
    <string name="pants">Pants:</string>
    <string name="shoes">Shoes:</string>
    <string name="walk">Walk</string>
    <string name="drive">Drive</string>
    <string name="address"><u>Address</u></string>
    <string name="officenumbers"><u>Office Numbers</u></string>
    <string name="website"><u>Website</u></string>
    <string name="email"><u>Email</u></string>
    <string name="facebook"><u>Facebook</u></string>
    <string name="twitter"><u>Twitter</u></string>
    <string-array name="EVENTTABS">
       <item>About</item> 
       <item>Promos</item>
       <item>Features</item>
       <item>Map</item>
       <item>Contact</item>
    </string-array>
    
    
    <string name="facebook_app_id">1492422404349391</string>
    <string name="clubabout">blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah 
        blah blah blah blah blah blah blah blah </string>

    
    <array name="cimgs">
        <item>R.drawable.icon_home</item>
        <item>R.drawable.ic_launcher</item>
        <item>R.drawable.icon_profile</item>
        <item>R.drawable.icon_launcher</item>
        <item>R.drawable.icon_home</item>
    </array>
    
    
    <string-array name="cnames">
        <item>Salt</item>
        <item>Ragga Breeze</item>
        <item>Team Up</item>
        <item> Club Mild</item>
        <item>Club 180</item>
    </string-array>
    <string-array name="cdescr">
        <item>1.This is one of the clubs being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>2.This is one of the clubs being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>3.This is one of the clubs being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>4.This is one of the clubs being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>5.This is one of the clubs being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
    </string-array>
    
    <array name="crate">
        <item>3</item>
        <item>4</item>
        <item>2</item>
        <item>5</item>
        <item>1</item>
        
    </array>
    
    <array name="photoid">
        <item>31</item>
        <item>42</item>
        <item>23</item>
        <item>54</item>
        <item>16</item>
        
    </array>
    <string-array name="photourls">
       <item>http://1.bp.blogspot.com/-_hKFc0x-h-A/UPQ7FiGdA9I/AAAAAAAAA-8/K2VGZSxgGF0/s1600/76593_451693141540338_203048964_n.jpg</item>
       <item >http://2.bp.blogspot.com/-NIayBGxkONU/UPQ7FKM_1MI/AAAAAAAAA-0/5RTpqIRxnL4/s1600/533054_394896027220050_1609823675_n.jpg</item>
       <item >http://www.igrealty.com/wp-content/uploads/2014/08/suga.jpg</item>
       <item >http://newswire.net/public/article/e0/25/25bb_ac8f.jpg</item>
    </string-array>
    
<!-- STRINGS FOR EVENTS LIST -->
 <string-array name="evListimgs">
        <item>R.drawable.icon_home</item>
        <item>R.drawable.ic_launcher</item>
        <item>R.drawable.icon_profile</item>
        <item>R.drawable.icon_launcher</item>
        <item>R.drawable.icon_home</item>
    </string-array>
    
    
    <string-array name="evListnames">
        <item>TYT</item>
        <item>All Out</item>
        <item>SoundBang</item>
        <item>Scorch</item>
        <item>Scabout</item>
    </string-array>
    <string-array name="evListdescr">
        <item>1.This is one of the EVENTS being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>2.This is one of the EVENTA being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>3.This is one of the EVENTB being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>4.This is one of the EVENTC being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
        <item>5.This is one of the EVENTD being displayed. Basically a ver
            generic set of words so i would know how this works with arrays
            im not sure if i have a limit but i need just enough to be scrollable
           . lets see how this goes</item>
    </string-array>
    
    <string-array name="radioButton">
        <item>false</item>
        <item>false</item>
        <item>true</item>
        <item>false</item>
        <item>false</item>
    </string-array>
    
    
    
    <!-- ARRAYS FOR EVENTS CONTACT SECTION -->
    <array name="evConImgs">
         <item>R.drawable.icon_home</item>
        <item>R.drawable.ic_launcher</item>
        <item>R.drawable.icon_profile</item>
    </array>
    
    <string-array name="evConName">
        <item >Hutchy</item>
        <item>Biggest</item>
        <item>Dre/Fresh Prince</item>
    </string-array>
    
    <string-array name="evConNum">
        <item>235-3342</item>
        <item>254-6683</item>
        <item>232-0183</item>
    </string-array>
    
    <string-array name="evConEmail">
        <item>megaslut@whores.inc</item>
        <item>shmurdakilla@tweakers.com</item>
        <item>degaldempotsalt@scab.com</item>
    </string-array>
    
    <string-array name="evConFbk">
        <item >www.facebook.com/hutchy</item>
        <item >www.facebook.com/biggest</item>
        <item >www.facebook.com/scabtacular</item>
    </string-array>
    
    <string-array name="evConTwit">
        <item >/@Hutchy</item>
        <item >/@ShmurdaKilla</item>
        <item >/@Freshest</item>
    </string-array>
</resources>