<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="45dp" />

    <ImageView
        android:id="@+id/imgLog"
        android:layout_width="312dp"
        android:layout_height="342dp"
        android:layout_gravity="center"
        android:src="@drawable/loginimg" />

    <Button
        android:id="@+id/btnFbLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fbLogin" />

    <Button
        android:id="@+id/btnTwitLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/twitLogin" />

</LinearLayout>