<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvAdmTag"
                style="@style/FeatureLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admission" />

            <TextView
                android:id="@+id/tvEvAdm"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$25.00" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDateTag"
                style="@style/FeatureLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tvEvDate"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01/09/1992" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvTimeTag"
                style="@style/FeatureLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/tvEvTime"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12:40am" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvPromoTag"
                style="@style/FeatureLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promotion" />

            <TextView
                android:id="@+id/tvEvPromo"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ladies 2 4 1 before 12" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDrinksTag"
                style="@style/FeatureLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drinkslist" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDrinks1"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink1" />

            <TextView
                android:id="@+id/tvEvDrinks2"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDrinks3"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink1" />

            <TextView
                android:id="@+id/tvEvDrinks4"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDrinks5"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink1" />

            <TextView
                android:id="@+id/tvEvDrinks6"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink2" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDrinks7"
                style="@style/FeatureDrinkItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-drink7" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvDressTag"
                style="@style/FeatureLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dresscode" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvHatsTag"
                style="@style/FeatureDressLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hats" />

            <TextView
                android:id="@+id/tvEvHat"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvHoodiesTag"
                 style="@style/FeatureDressLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoodies" />

            <TextView
                android:id="@+id/tvEvHoodies"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvShirtsTag"
                 style="@style/FeatureDressLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shirts" />

            <TextView
                android:id="@+id/tvEvShirts"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T-Shirt/Button Up" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvPantsTag"
                 style="@style/FeatureDressLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pants" />

            <TextView
                android:id="@+id/tvEvPants"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jeans or Slacks" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvEvShoesTag"
                 style="@style/FeatureDressLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes" />

            <TextView
                android:id="@+id/tvEvShoes"
                style="@style/FeatureItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trainers or Soft Shoes" />
        </TableRow>
    </TableLayout>

</ScrollView>