<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        
        <TableRow 
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCAddressTag"
                style="@style/Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCAddress"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="425,The Avenue, Jez Pew" />
            
        </TableRow>
       
            <TableRow 
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCNumTag"
                style="@style/Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/officenumbers" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCNum1"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-246-397-1969" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCNum2"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-246-397-2265" />
            
        </TableRow>
         <TableRow 
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCWSTag"
                style="@style/Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCWS"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="https://www.saltedarticulate.com" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCEmailTag"
                style="@style/Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCEmail"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="saltedmilk@articulate.com" />
            
        </TableRow>
         <TableRow 
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCFbkTag"
                style="@style/Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCFbk"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="https//facebook.com/Salted" />
            
        </TableRow>
             <TableRow 
            android:id="@+id/tableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCTwitTag"
                style="@style/Titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter" />
            
        </TableRow>
        <TableRow 
            android:id="@+id/tableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCCTwit"
                style="@style/Items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#Salted_Milk" />
            
        </TableRow>
    </TableLayout>

</ScrollView>